apex/grammar.js
    parser_output: ($) => repeat($.statement),

    // Expressions

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            alias(
              choice(
                "=",
                "+=",
                "-=",
                "*=",
                "/=",
                "&=",
                "|=",
                "^=",
                "%=",
                "<<=",
                token(seq("<", /[\s\n]*/, "<", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
              ),
              $.assignment_operator,
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          [">", PREC.REL],
          ["<", PREC.REL],
          [alias(token(seq(">", /[\s\n]*/, "=")), ">="), PREC.REL],
          [alias(token(seq("<", /[\s\n]*/, "=")), "<="), PREC.REL],
          ["==", PREC.EQUALITY],
          ["===", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["<>", PREC.EQUALITY],
          ["!==", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["??", PREC.NULL_COALESCE],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          [alias(token(seq("<", /[\s\n]*/, "<")), "<<"), PREC.SHIFT],
          [alias(token(seq(">", /[\s\n]*/, ">")), ">>"), PREC.SHIFT],
          [
            alias(token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, ">")), ">>>"),
            PREC.SHIFT,
          ],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    ternary_expression: ($) =>
      prec.right(
        PREC.TERNARY,
        seq(
          field("condition", $.expression),
          "?",
          field("consequence", $.expression),
          ":",
          field("alternative", $.expression),
        ),
      ),

    unary_expression: ($) =>
      prec.left(
        PREC.UNARY,
        seq(
          field("operator", choice("+", "-", "!", "~")),
          field("operand", $.expression),
        ),
      ),

    update_expression: ($) =>
      prec.left(
        PREC.UNARY,
        choice(
          // Post (in|de)crement is evaluated before pre (in|de)crement
          seq(
            field("operand", $.expression),
            field("operator", $.update_operator),
          ),
          seq(
            field("operator", $.update_operator),
            field("operand", $.expression),
          ),
        ),
      ),

    update_operator: ($) => choice("++", "--"),

    field_access: ($) =>
      seq(
        field("object", choice($.primary_expression, $.super)),
        $._property_navigation,
        field("field", choice($.identifier, $.this)),
      ),

    _property_navigation: ($) => choice($.safe_navigation_operator, "."),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier),
          ),
        ),
        field("arguments", $.argument_list),
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body),
      ),

    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    modifier: ($) =>
      choice(
        $.global,
        $.public,
        $.testMethod,
        $.webservice,
        $.protected,
        $.override,
        $.private,
        $.virtual,
        $.abstract,
        $.static,
        $.final,
        $.transient,
        $.with_sharing,
        $.without_sharing,
        $.inherited_sharing,
      ),

    public: ($) => ci("public"),
    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";",
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer),
          ),
        ),
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions)),
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";",
      ),

    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
